# mcp-terminal

./: .gitignore  LICENSE  README.md  index.ts  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
src/mcp_terminal/: __init__.py  errors.py  server.js  server.py  terminal.py
tests/: __init__.py  server.test.ts  test_server.py  test_server_protocol.py  test_terminal.py  utils.py
