[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-terminal"
version = "0.1.0"
description = "MCP Terminal Server for secure command execution"
authors = [
    { name = "Nicholas Rinard", email = "nickarinard@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mcp-terminal = "mcp_terminal.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]